--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header class="navbar" id="navbar">
         <nav class="navbar container"> 
-<a>Welcome</a>
+<a class="studio-name">Cat & Cow</a>
 <div>
     <ul class="list">
         <li>
